# rag_chatbot_app

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
api/: database.py  ingestion.py  main.py  requirements.txt
documents/: ai_concepts.txt
frontend/app/: page.js
