[project]
name = "rag-chatbot-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.1",
    "openai>=1.102.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.14",
    "uvicorn[standard]>=0.35.0",
]
